# VoiceOps

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile
css/: mic.png~  style.css
database/: voiceops.db
headers/: Database.hpp  Dialogs.hpp  HotkeyHandler.hpp  Networking.hpp  Screenshot.hpp  Utils.hpp  Voice.hpp  Window.hpp
headers/common/: jitter_buffer.h  networking.h  text_packet.h
headers/server/: voice_server.h
prototypes/avinav/: Client.cpp  Server.cpp  database.h  file.h
prototypes/kripesh/: .gitignore  build.sh  gtk_threads.c  jitter_buffer.h
prototypes/rundll/: rundll.c
server/: server.cpp
src/: database.cpp  dialogs.cpp  hotkeyhandler.cpp  main.cpp  networking.cpp  screenshot.cpp  voice.cpp  window.cpp
src/common/: jitter_buffer.cpp  text_packet.cpp
src/server/: database.h  filefunction.h  server.cpp  voice_server.cpp
